FIX: Align css to reflect AA css transitions Bonus Phase project requirements

--- a/your-code.css
+++ b/your-code.css
@@ -35,9 +35,16 @@
     height: 200px;
     width: auto;
     margin-left: 300px;
-    /* Your animation here
+    /* Your animation here */
+    animation: infinite spin 2s linear;
 }
 
 @keyframes spin {
-    /* Set up your keyframe animation here
+    /* Set up your keyframe animation here */
+    from {
+	transform: rotate(-360deg);
+    }
+    to {
+	transform: rotate (360deg);
+    }
 }
